# public/openapi.yaml
@@ -3,7 +3,7 @@ swagger: "2.0"
 info:
   title: OKR Tracker API
   description: API for updating KPIs and key results.
-  version: 1.3.0
+  version: 1.4.0
   contact:
     name: Dataspeilet
     url: https://okr.oslo.systems
@@ -69,11 +69,19 @@ paths:
         - name: progress
           in: body
           required: true
-          description: updated progress
+          description: Progression value
           schema:
             type: number
             example:
               progress: 123
+        - name: comment
+          in: body
+          required: false
+          description: Progression comment
+          schema:
+            type: string
+            example:
+              comment: A fine measurement
         - name: okr-team-secret
           in: header
           description: Identify yourself with the secret you chose in your Team's settings
@@ -140,6 +148,14 @@ paths:
             type: number
             example:
               value: 123
+        - name: comment
+          in: body
+          required: false
+          description: Progression comment
+          schema:
+            type: string
+            example:
+              comment: A fine measurement
       responses:
         200:
           description: A successful response
@@ -206,11 +222,19 @@ paths:
         - name: progress
           in: body
           required: true
-          description: updated progress
+          description: Progression value
           schema:
             type: number
             example:
               progress: 123
+        - name: comment
+          in: body
+          required: false
+          description: Progression comment
+          schema:
+            type: string
+            example:
+              comment: A fine measurement
         - name: okr-team-secret
           in: header
           description: Identify yourself with the secret you chose in your Team's settings
